optimize ticket.js

--- a/ticket.html
+++ b/ticket.html
@@ -24,8 +24,7 @@
         ticketFn("#ticket", [
             {
                 type: 1,
-                name: "折扣券",
-                text: "9.0",
+                text: "9.0",  // 注意了，若有小数点，用String类型，和第52行对比页面结果
                 desc: "满50元可用",
 
                 content: "Gofun出行9折券",
@@ -33,7 +32,6 @@
             },
             {
                 type: 2,
-                name: "代金券",
                 text: 30,
                 // desc: "满50元可用",
 
@@ -51,7 +49,6 @@
             },
             {
                 type: 1,
-                name: "折扣券",
                 text: 9.0,
                 desc: "满50元可用",
 
